# datasets

./: .gitattributes  CHANGELOG.md  README.md  build.py  postgresql.py  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
datasets/: build.py  database.py  postgresql.py
datasets/databases/: mariadb.py  postgresql.py
datasets/sources/: financial.py
datasets/sources/extract/: extract.sql
datasets/sources/financial/: financial.sql
datasets/sources/hepatitis/: Hepatitis_std.sql
datasets/sources/imdb/: imdb_ijs.sql
datasets/sources/retail/: retail.sql
examples/: simple.py
qrlew_datasets/databases/: mariadb.py
qrlew_datasets/sources/: __init__.py  loader.py  relational_dataset_repository.py
qrlew_datasets/sources/financial/: __init__.py
qrlew_datasets/sources/hepatitis/: __init__.py
qrlew_datasets/sources/imdb/: __init__.py
tests/: test_sql_sources.py
