[tool.poetry]
name = "datasets"
version = "0.1.0"
description = "Sample SQL datasets"
authors = ["Nicolas Grislain <ng@sarus.tech>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.18"
psycopg2-binary = "^2.9.6"
mysqlclient = "^2.2.0"
termcolor = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
